# gpas-cli

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  VERSION  cli-upload.spec  environment-dev.yml  environment.yml  gpas.spec  pyproject.toml  setup.cfg
.github/workflows/: distribute-win.yml  distribute.yml  test.yml
lib/win/: README.md
res/countries/: countries_subdivisions.json
src/gpas/: __init__.py  cli-upload.py  cli.py  lib.py  misc.py  upload.py  util.py  validation.py
src/gpas/data/countries/: generate_countries_subdivisions.py
src/gpas/data/refs/: MN908947_no_polyA.fasta
tests/: conftest.py  test_gpas.py  test_gpas_online.py  test_gpas_upload.py
tests/manual-tests/: download.prod.varieties.sh  status.1k.sh  status.dev.1k.sh  status.prod.varieties.sh
tests/test-data/: benchmark-cmds.txt  cayman.csv  colliding-mandatory-arbitrary-fields.csv  contaminated-nanopore-fastq.csv  demo_sample_names.csv  dots-in-sample-name.csv  empty-after-decontamination-fastq.csv  empty-after-decontamination-paired-fastq.csv  empty-district-multiple.csv  empty-district.csv  empty-fastq.csv  empty-paired-fastq.csv  empty-region.csv  empty-run.csv  example.mapping.csv  extra-fields-interleaved.csv  extra-fields.csv  file.json  guyana.csv  large-illumina-bam.csv  large-illumina-fastq.csv  large-illumina-fq.csv  large-nanopore-bam.csv  large-nanopore-fastq space.csv  large-nanopore-fastq-no-run-batch.csv  large-nanopore-fastq.csv  large-nanopore-fq.csv  nanopore-bam.csv  nanopore-fastq-upload.csv  nanopore-fastq.csv  negative-control.csv  numeric-sample-name.csv  populated-run-numbers.csv  populated-unpopulated-run-numbers.csv  test_gpas.py  unpopulated-run-numbers.csv  valid-and-empty-tags.csv  vietnam.csv  weird-illumina-suffix.csv
tests/test-data/broken/: bad-path-suffix-instrument.csv  bad-path-suffix.csv  broken-path.csv  broken-token.json  different-platforms.csv  dupe-fastq1-fastq2.csv  dupe-fastqs-illumina.csv  dupe-fastqs.csv  dupe-names.csv  dupe-tags.csv  empty-bam.csv  empty-country-region.csv  empty-country.csv  empty-date.csv  empty-fastq.csv  empty-name.csv  empty-region.csv  empty-tags-colon.csv  epochalypse.csv  illegal-chârs.csv  impossible-country-region.csv  improperly-paired-bam.csv  insane-date.csv  invalid-country-region.csv  invalid-date.csv  large-illumina-dupe-tags-fastq.csv  large-illumina-fastq-wrong-platform.csv  large-illumina-no-tags-fastq.csv  missing-collection-date.csv  missing-country.csv  missing-platform.csv  missing-region.csv  missing-tags.csv  no-header.csv  no-schema.csv  no-tags-colon.csv  no-tags.csv  non-iso-date.csv  spaces-weird-chars.csv  valid-and-invalid-tags.csv  (+4 more)
tests/test-data/nanopore-bam/: unpaired1.bam  unpaired2.bam  unpaired5.bam  unpaired6.bam
tests/test-data/reads/: improperly-paired-bam.bam  large-illumina-bam-2.bam  large-nanopore-bam.bam
tests/test-data/reads/nanopore-bam/: unpaired3.bam  unpaired4.bam
