[metadata]
name = gpas
version = file: VERSION
description = A command line client for the Global Pathogen Analysis System
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/GenomePathogenAnalysisService/gpas-cli
author = Bede Constantinides
author_email = bedeabc@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://github.com/GenomePathogenAnalysisService/gpas-cli
    CI = https://github.com/GenomePathogenAnalysisService/gpas-cli/actions/new
    Source = https://github.com/GenomePathogenAnalysisService/gpas-cli
    Tracker = https://github.com/GenomePathogenAnalysisService/gpas-cli/issues

[options]
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
python_requires >= 3.10
install_requires =
    # gpas-uploader @ git+https://github.com/GenomePathogenAnalysisService/gpas-uploader
    defopt >= 6.3.0
    pandas >= 1.4.1
    requests >= 2.27.1
[bdist_wheel]
universal = 1
[options.extras_require]
dev =
    pytest >= 7.0.1
    pre-commit >= 2.19.0
    black >= 22.3.0
[options.entry_points]
console_scripts =
    gpas = gpas.cli:main
