[metadata]
name = gpas
version = file: VERSION
description = A command line client for the Global Pathogen Analysis Service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/GlobalPathogenAnalysisService/gpas-cli
author = Bede Constantinides, Philip Fowler
author_email = bedeabc@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://github.com/GlobalPathogenAnalysisService/gpas-cli
    CI = https://github.com/GlobalPathogenAnalysisService/gpas-cli/actions
    Source = https://github.com/GlobalPathogenAnalysisService/gpas-cli
    Tracker = https://github.com/GlobalPathogenAnalysisService/gpas-cli/issues
[options]
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.10
install_requires =
    defopt >= 6.3.0
    pandas >= 1.4.1
    requests >= 2.27.1
    httpx >= 0.22.0
[bdist_wheel]
universal = 1
[options.extras_require]
dev =
    pytest >= 7.0.1
    pre-commit >= 2.19.0
    black >= 22.3.0
[options.entry_points]
console_scripts =
    gpas = gpas.cli:main
[options.packages.find]
where = src
[mypy]
ignore_missing_imports = True
