[metadata]
name = gpas
version = file: VERSION
description = A command line client for the Global Pathogen Analysis Service
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/GlobalPathogenAnalysisService/gpas-cli
author = Bede Constantinides, Philip Fowler
author_email = bedeabc@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://github.com/GlobalPathogenAnalysisService/gpas-cli
    CI = https://github.com/GlobalPathogenAnalysisService/gpas-cli/actions
    Source = https://github.com/GlobalPathogenAnalysisService/gpas-cli
    Tracker = https://github.com/GlobalPathogenAnalysisService/gpas-cli/issues
[options]
packages = find:
package_dir =
    = src
include_package_data = True
platforms = any
python_requires = >= 3.10
install_requires =
    httpx == 0.23.0
    pandas == 1.4.2
    pandera == 0.11.0
    defopt == 6.3.0
    tqdm == 4.64.0
    tenacity == 8.0.1
[bdist_wheel]
universal = 0
[options.extras_require]
dev =
    pytest >= 7.0.1
    pre-commit >= 2.19.0
    black >= 22.3.0
[options.entry_points]
console_scripts =
    gpas = gpas.cli:main
[options.packages.find]
where = src
[mypy]
ignore_missing_imports = True
[options.package_data]
gpas = data/countries/*.json, data/refs/*.fasta
